--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta web</title>
-    <script type="module" crossorigin src="/assets/main-DAbyDKKA.js"></script>
-    <script type="module" crossorigin src="/assets/sliders-BJrpeDNP.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-CKAx7TQC.css">
-    <link rel="stylesheet" crossorigin href="/assets/sliders-BUrcyj0q.css">
+    <script type="module" crossorigin src="./assets/main-DAbyDKKA.js"></script>
+    <script type="module" crossorigin src="./assets/sliders-BJrpeDNP.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-CKAx7TQC.css">
+    <link rel="stylesheet" crossorigin href="./assets/sliders-BUrcyj0q.css">
   </head>
   <body>
 
@@ -16,7 +16,7 @@
     		<div class="header-container container">
     			<div class="logo">
     				<a>
-    					<img src="/img/Logo_header.svg">
+    					<img src="./img/Logo_header.svg">
     				</a>
     			</div>
     			<div class="content">
@@ -549,6 +549,8 @@
     			</div>
     		</div>
     	</div>
-    </footer>
+    </footer>
+
+
   </body>
 </html>
